fix: add reliable file logging and --add-modules for JavaFX subprocess
Log writes to %APPDATA%\workordermanager\launcher.log on Windows.
Logs every step: jar path, java exe, process start, exit code.
Adds --add-modules javafx.* so Liberica bundled modules load correctly
in the subprocess (fat jar classpath alone isn't enough).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>